--- a/MyJSProject/WebContent/export-page-to-doc.html
+++ b/MyJSProject/WebContent/export-page-to-doc.html
@@ -43,7 +43,7 @@
 				</tr>
 			</tbody>
 		</table>
-
+		<p>I am testing it again with text</p>
 	</div>
 	<div>
 		<a class="word-export" href="javascript:void(0)"
