--- a/MyJSProject/WebContent/export-page-to-doc.html
+++ b/MyJSProject/WebContent/export-page-to-doc.html
@@ -3,52 +3,51 @@
 <head>
 <meta charset="UTF-8">
 <title>My POC for Export page to DOC</title>
+<link rel="stylesheet" href="css/css-practice.css">
 </head>
 <body>
 	<script src="js/export-page-to-doc.js" type="text/javascript"></script>
-
-	<div id="MainHTML">
-		<h1>
-			<center>My POC for export page to .doc</center>
-
-		</h1>
-		<h2>I added both the text and images below</h2>
-		<p>once you click on export, you document will be automatically
-			downloaded.</p>
-
-		<table>
-			<thead>
-				<tr>
-					<th>1</th>
-					<th>2</th>
-					<th>3</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><img
-						src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
-					<td><img
-						src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
-					<td><img
-						src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
-				</tr>
-				<tr>
-					<td><img
-						src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
-					<td><img
-						src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
-					<td><img
-						src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
-				</tr>
-			</tbody>
-		</table>
-		<p>I am testing it again with text</p>
+	<div id="docx">
+		<div class="WordSection1">
+			<h1>My POC for export page to .doc</h1>
+			<h2>I added both the text and images below</h2>
+			<p>once you click on export, you document will be automatically
+				downloaded.</p>
+			<table>
+				<thead>
+					<tr>
+						<th>1</th>
+						<th>2</th>
+						<th>3</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><img
+							src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
+						<td><img
+							src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
+						<td><img
+							src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
+					</tr>
+					<tr>
+						<td><img
+							src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
+						<td><img
+							src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
+						<td><img
+							src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png"></td>
+					</tr>
+				</tbody>
+			</table>
+			<img style="width: 30px;"
+				src="https://res.cloudinary.com/dmsxwwfb5/image/upload/v1580916756/buy-me-min.png">
+			<p>I am testing it again with text</p>
+		</div>
+		<div>
+			<a class="word-export" href="javascript:void(0)"
+				onclick="export2Word(window.docx)">Export to Doc</a>
+		</div>
 	</div>
-	<div>
-		<a class="word-export" href="javascript:void(0)"
-			onclick="exportHTML()">Export to Doc</a>
-	</div>
-
 </body>
 </html>
