--- a/MyJSProject/WebContent/export-page-to-doc.html
+++ b/MyJSProject/WebContent/export-page-to-doc.html
@@ -8,7 +8,7 @@
 <body>
 	<script src="js/export-page-to-doc.js" type="text/javascript"></script>
 	<div id="docx">
-		<div class="WordSection1">
+		<div class="WordSection1 sm-align-center">
 			<h1>My POC for export page to .doc</h1>
 			<h2>I added both the text and images below</h2>
 			<p>once you click on export, you document will be automatically
